--- a/NancyApplication1/TT.BizLogic/packages.config
+++ b/NancyApplication1/TT.BizLogic/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.Build" version="1.0.7" targetFramework="net40" />
   <package id="mongocsharpdriver" version="1.8.1" targetFramework="net45" />
 </packages>
