--- a/NancyApplication1/Nancy.LightningCache/Nancy.LightningCache.csproj
+++ b/NancyApplication1/Nancy.LightningCache/Nancy.LightningCache.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Reference Include="Nancy, Version=0.17.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\sourceCode\TTMain\NancyApplication1\packages\Nancy.0.17.1\lib\net40\Nancy.dll</HintPath>
+      <HintPath>..\packages\Nancy.0.17.1\lib\net40\Nancy.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
