--- a/NancyApplication1/NancyApplication1/TT.Web.csproj
+++ b/NancyApplication1/NancyApplication1/TT.Web.csproj
@@ -156,6 +156,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\jquery.quick.pagination.min.js" />
     <Content Include="Scripts\less.min.js" />
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\moment.js" />
@@ -168,20 +169,25 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Core\BundleConfig.cs" />
     <Compile Include="Core\TTRazorViewBase.cs" />
+    <Compile Include="Modules\StrokesModule.cs" />
     <Compile Include="Modules\ServicesModule.cs" />
     <Compile Include="Modules\IndexModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\StrokesViewModel.cs" />
     <Compile Include="ViewModels\IndexViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\index.cshtml" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
     <Content Include="Views\Shared\_layout.cshtml" />
     <Content Include="Views\Shared\_currentPost.cshtml" />
     <Content Include="Views\Shared\_headlines.cshtml" />
     <Content Include="Views\Shared\_videoCarousel.cshtml" />
+    <Content Include="Views\strokes.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
